@@ -1,0 +1,2 @@
+*.bib.bak
+*.bib.sav
