@@ -1,0 +1,19 @@
+% Encoding: UTF-8
+
+@Book{Saleh_1991,
+  title     = {Fundamentals of Photonics},
+  publisher = {John Wiley {\&} Sons, Inc.},
+  year      = {1991},
+  author    = {Bahaa E. A. Saleh and Malvin Carl Teich},
+  month     = {aug},
+  doi       = {10.1002/0471213748},
+}
+
+@Book{Goodman_2005,
+  title     = {Introduction to Fourier Optics 3rd ed},
+  publisher = {Roberts \& Company Publishers},
+  year      = {2005},
+  author    = {Joseph W. Goodman},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
